new logo, new layout with leftbar

--- a/public/index.html
+++ b/public/index.html
@@ -204,6 +204,7 @@
   </div>
 </div>
 <aside class="sidebar">
+	<img id="nate-speller-logo" src="../images/nate-speller-logo.png" />
   
     <section>
   <h1>Recent Posts</h1>
