--- a/source/index.html
+++ b/source/index.html
@@ -21,6 +21,7 @@ layout: default
   </div>
 </div>
 <aside class="sidebar">
+	<img id="nate-speller-logo" src="../images/nate-speller-logo.png" />
   {% if site.blog_index_asides.size %}
     {% include_array blog_index_asides %}
   {% else %}
