bug fixes for resizing sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,8 @@
   </div>
 </div>
 <aside class="sidebar">
-	<img id="nate-speller-logo" src="../images/nate-speller-logo.png" />
+	<a id="nate-speller-logo" href="/">
+	<img src="/images/nate-speller-logo.png" /></a>
   
     <section>
   <h1>Recent Posts</h1>
