--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,8 @@ layout: default
   </div>
 </div>
 <aside class="sidebar">
-	<img id="nate-speller-logo" src="../images/nate-speller-logo.png" />
+	<a id="nate-speller-logo" href="/">
+	<img src="/images/nate-speller-logo.png" /></a>
   {% if site.blog_index_asides.size %}
     {% include_array blog_index_asides %}
   {% else %}
