updates to article 1

--- a/public/index.html
+++ b/public/index.html
@@ -99,13 +99,19 @@
 
 <p>It&#8217;s you.</p>
 
-<p>It&#8217;s that voice in your head that never seems to quit:
-- &#8220;I&#8217;ll start that personal project tomorrow&#8221;
-&#8220;ugh, everyone else is so much more successful&#8221;
-- &#8220;just one more article and then I&#8217;ll start my work&#8221;
-&#8220;ugh, I&#8217;m so lazy&#8221;
-- &#8220;just one more donut&#8221;
-  &#8220;ugh, OMG I&#8217;m so fat&#8221;</p>
+<p>It&#8217;s that voice in your head that never seems to quit:</p>
+
+<blockquote>&#8220;I&#8217;ll start that personal project tomorrow&#8221;<br>
+&#8220;geez, everyone else is so much more successful&#8221;</blockquote>
+
+
+<blockquote>&#8220;just one more article and then I&#8217;ll start my work&#8221;<br>
+&#8220;ugh, I&#8217;m so lazy&#8221;</blockquote>
+
+
+<blockquote>&#8220;just one more slice of pie&#8221;<br>
+  &#8220;OMG I&#8217;m so fat&#8221;</blockquote>
+
 
 <p>You&#8217;ve tried to fix the situation with motivational youtube videos, new workout buddies, the latest to-do lists (to-do lists for your to-do lists), etc. You get excited about your new found motivation. You get pumped: &#8220;I got this!!! There&#8217;s no way I can fail this time!!&#8221;</p>
 
