--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
   &#8220;OMG I&#8217;m so fat&#8221;</blockquote>
 
 
-<p>You&#8217;ve tried to fix the situation with motivational youtube videos, new workout buddies, the latest to-do lists (to-do lists for your to-do lists), etc. You get excited about your new found motivation. You get pumped: &#8220;I got this!!! There&#8217;s no way I can fail this time!!&#8221;</p>
+<p>You&#8217;ve tried to fix the situation with motivational youtube videos, new workout tapes, the latest to-do lists (to-do lists for your to-do lists), etc. You get excited about your new found motivation. &#8220;I got this!!! There&#8217;s no way I can fail this time!!&#8221;</p>
 
 <p>Yet the internal dialogue brings you down eventually.</p>
 
