put same meta description for all pages

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Nathan Speller">
 
   
-  <meta name="description" content="More often than not, bad stuff happens in the startup world. Customers complain, deals fall through, cofounders leave. When things get tough it&#8217 &hellip;">
+  <meta name="description" content="Nathan Speller is an entrepreneur, developer and designer blogging about startups in Pittsburgh, PA">
   
 
   <!-- http://t.co/dKP3o1e -->
