--- a/public/internal-dialogue/index.html
+++ b/public/internal-dialogue/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Nathan Speller">
 
   
-  <meta name="description" content="In a given day, who do you talk to most? A co-worker? Best friend? A significant other? I&#8217;m willing to bet that there&#8217;s another person &hellip;">
+  <meta name="description" content="Nathan Speller is an entrepreneur, developer and designer blogging about startups in Pittsburgh, PA">
   
 
   <!-- http://t.co/dKP3o1e -->
