--- a/public/phrasing/index.html
+++ b/public/phrasing/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Nathan Speller">
 
   
-  <meta name="description" content="There are a ton of books written on how to talk to children. One topic I see frequently is how to properly phrase criticism. The idea is that when a &hellip;">
+  <meta name="description" content="Nathan Speller is an entrepreneur, developer and designer blogging about startups in Pittsburgh, PA">
   
 
   <!-- http://t.co/dKP3o1e -->
