--- a/public/tone/index.html
+++ b/public/tone/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Nathan Speller">
 
   
-  <meta name="description" content="Here&#8217;s a self-awareness tip. While thinking through your problems, your mood can easily cloud your judgement. However, sometimes you&#8217;ll &hellip;">
+  <meta name="description" content="Nathan Speller is an entrepreneur, developer and designer blogging about startups in Pittsburgh, PA">
   
 
   <!-- http://t.co/dKP3o1e -->
