--- a/public/taking-responsibility/index.html
+++ b/public/taking-responsibility/index.html
@@ -23,7 +23,7 @@
   
   <link rel="canonical" href="http://nathanspeller.com/taking-responsibility/">
   <link href="/favicon.png" rel="icon">
-  <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+  <link href="/stylesheets/screen.css?v=1.1" media="screen, projection" rel="stylesheet" type="text/css">
   <script src="/javascripts/modernizr-2.0.js"></script>
   <script src="/javascripts/ender.js"></script>
   <script src="/javascripts/octopress.js" type="text/javascript"></script>
