--- a/public/taking-responsibility/index.html
+++ b/public/taking-responsibility/index.html
@@ -27,11 +27,8 @@
   <script src="/javascripts/modernizr-2.0.js"></script>
   <script src="/javascripts/ender.js"></script>
   <script src="/javascripts/octopress.js" type="text/javascript"></script>
-  <link href="/atom.xml" rel="alternate" title="Nathan Speller" type="application/atom+xml">
-  <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
-<link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-
+  <link href="http://feeds.feedburner.com/nathanspeller" rel="alternate" title="Nathan Speller" type="application/atom+xml">
+  
   <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -58,8 +55,10 @@
 </hgroup>
 
 </header>
-  <nav role="navigation"><ul class="subscription" data-subscription="rss">
-  <li><a href="/atom.xml" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
+  <nav role="navigation"><ul class="subscription" data-subscription="rss email">
+  <li><a href="http://feeds.feedburner.com/nathanspeller" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
+  
+    <li><a href="http://feedburner.google.com/fb/a/mailverify?uri=nathanspeller" rel="subscribe-email" title="subscribe via email">Email</a></li>
   
 </ul>
   
@@ -181,7 +180,10 @@
       <a href="/blog/archives">Blog Archive</a>
     </li>
     <li>
-      <a href="/atom.xml">RSS</a>
+      <a href="http://feedburner.google.com/fb/a/mailverify?uri=nathanspeller" title="subscribe via email">Subscribe via Email</a>
+    </li>
+    <li>
+      <a href="http://feeds.feedburner.com/nathanspeller">RSS</a>
     </li>
   </ul>
 </section>
