--- a/source/index.html
+++ b/source/index.html
@@ -1,33 +1,28 @@
 ---
-layout: default
+layout: nosidebar
+footer: false
 ---
 
-<div class="blog-index">
-  {% assign index = true %}
-  {% for post in paginator.posts %}
-  {% assign content = post.content %}
-    <article>
-      {% include article.html %}
-      <p class="meta">
-        <p class="meta-date"> 
-          {% include post/date.html %}{{ time }}
-        </p>
-        <a href="{{ root_url }}{{ post.url }}#disqus_thread">View Comments</a> 
-        {% if site.twitter_tweet_button and false %}
-        <span style="position: relative; top: 4px; float: right">
-        <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ site.url }}{{ post.url }}" data-via="{{ site.twitter_user }}" data-counturl="{{ site.url }}{{ post.url }}" >Tweet</a></span>
-        {% endif %}
-      </p>
-    </article>
+<div id="blog-archives">
+{% for post in site.posts reverse %}
+{% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+{% unless year == this_year %}
+  {% assign year = this_year %}
+  <h2>{{ year }}</h2>
+{% endunless %}
+<article>
+  <span class="stars">
+  {% for star in (1..post.stars) %}
+    <img src="/images/star.png" />
   {% endfor %}
-  <div class="pagination">
-    {% if paginator.next_page %}
-      <a class="prev" href="{{paginator.next_page}}">&larr; Older</a>
-    {% endif %}
-    <a href="/blog/archives">Blog Archives</a>
-    {% if paginator.previous_page %}
-    <a class="next" href="{{paginator.previous_page}}">Newer &rarr;</a>
-    {% endif %}
-  </div>
+  </span>
+
+  {% include archive_post.html %}
+</article>
+{% endfor %}
 </div>
-{% include sidebar.html %}
+
+<aside class="sidebar landing-sidebar">
+<a id="nate-speller-logo" href="/">
+  <img src="/images/nate-speller-logo.png" /></a>
+</aside>
