stars to circles as views

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,8 @@
 	    <div>
 <article role="article">
   
-  <div id="blog-archives">
+  <span id="visits">VIEWS</span>
+<div id="blog-archives">
 
 
 
@@ -91,7 +92,7 @@
 <article>
   <span class="stars">
   
-    <img src="/images/star.png" />
+    <img src="/images/circle.png" />
   
   </span>
 
@@ -107,11 +108,11 @@
 <article>
   <span class="stars">
   
-    <img src="/images/star.png" />
+    <img src="/images/circle.png" />
   
-    <img src="/images/star.png" />
+    <img src="/images/circle.png" />
   
-    <img src="/images/star.png" />
+    <img src="/images/circle.png" />
   
   </span>
 
@@ -171,6 +172,8 @@
 
 <article>
   <span class="stars">
+  
+    <img src="/images/circle.png" />
   
   </span>
 
