--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <script src="/javascripts/modernizr-2.0.js"></script>
   <script src="/javascripts/ender.js"></script>
   <script src="/javascripts/octopress.js" type="text/javascript"></script>
-  <link href="http://feeds.feedburner.com/nathanspeller" rel="alternate" title="Nathan Speller" type="application/atom+xml">
+  <link href="http://nathanspeller.com/atom.xml" rel="alternate" title="Nathan Speller" type="application/atom+xml">
   
   <script type="text/javascript">
 
@@ -56,9 +56,9 @@
 
 </header>
   <nav role="navigation"><ul class="subscription" data-subscription="rss email">
-  <li><a href="http://feeds.feedburner.com/nathanspeller" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
+  <li><a href="http://nathanspeller.com/atom.xml" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
   
-    <li><a href="http://feedburner.google.com/fb/a/mailverify?uri=nathanspeller" rel="subscribe-email" title="subscribe via email">Email</a></li>
+    <li><a href="http://eepurl.com/vQ9LP" rel="subscribe-email" title="subscribe via email">Email</a></li>
   
 </ul>
   
