color pickers post

--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,22 @@
 
 <article>
   
+<h1><a href="/color-pickers/">Color Pickers</a></h1>
+<span class="stars">
+  
+    <img src="/images/circle.png" />
+  
+    <img src="/images/circle.png" />
+  
+  </span>
+
+
+</article>
+
+
+
+<article>
+  
 <h1><a href="/inbound-marketing-for-startups/">Inbound Marketing for Startups</a></h1>
 <span class="stars">
   
