--- a/public/internal-dialogue/index.html
+++ b/public/internal-dialogue/index.html
@@ -50,7 +50,7 @@
   <header role="banner"><hgroup>
   <h1><a href="/">Nathan Speller</a></h1>
   
-    <h2>Startups, design, and self-awareness. Founder at <a href="http://wizzywig.io">wizzywig.io</a></h2>
+    <h2>Startups, design, and self-awareness. Founder at <a href="http://www.designly.com">designly.com</a></h2>
   
 </hgroup>
 
@@ -174,7 +174,7 @@
 	<a id="nate-speller-logo" href="/">
 	<img src="/images/nate-speller-logo.png" /></a>
 	<p class="sidebar-bio">
-  Entrepreneur, developer, designer, <br>Y Combinator and Alphalab alum, currently in Pittsburgh, PA.
+  Entrepreneur, developer, designer, currently in San Francisco, CA.
 </p>
   
     <section>
