--- a/public/color-pickers/index.html
+++ b/public/color-pickers/index.html
@@ -21,7 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-  <link rel="canonical" href="http://nathanspeller.com/color-pickers/">
+  <link rel="canonical" href="http://nathanspeller.github.com/color-pickers/">
   <link href="/favicon.png" rel="icon">
   <link href="/stylesheets/screen.css?v=1.2" media="screen, projection" rel="stylesheet" type="text/css">
   <script src="/javascripts/modernizr-2.0.js"></script>
@@ -64,7 +64,7 @@
   
 <form action="http://google.com/search" method="get">
   <fieldset role="search">
-    <input type="hidden" name="q" value="site:nathanspeller.com" />
+    <input type="hidden" name="q" value="site:nathanspeller.github.com" />
     <input class="search" type="text" name="q" results="0" placeholder="Search"/>
   </fieldset>
 </form>
@@ -175,7 +175,7 @@
     
       <div class="sharing">
   
-  <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://nathanspeller.com/color-pickers/" data-via="" data-counturl="http://nathanspeller.com/color-pickers/" >Tweet</a>
+  <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://nathanspeller.github.com/color-pickers/" data-via="" data-counturl="http://nathanspeller.github.com/color-pickers/" >Tweet</a>
   
   
   <div class="g-plusone" data-size="medium"></div>
